<resources>
    <string name="app_name">Recycler View</string>
    <string name="name">Name</string>
    <string name="employee_id">Employee Id :</string>
    <string name="id">Id</string>
    <string name="seperator">|</string>
    <string name="age">Age :</string>
    <string name="rs">Rs</string>
    <string name="salary">Salary</string>
    <string name="profile_image">Profile Image</string>
    <string name="enter_id">Enter Id</string>
</resources>
